# pixel-pal-app

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .ts-prune-baseline.txt  .ts-prunerc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.hooks.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.web.config.ts  tsconfig.electron.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.githooks/: pre-commit
.playwright-mcp/: page-2026-05-24T22-40-08-076Z.yml  page-2026-05-24T22-51-56-441Z.yml  page-2026-05-24T22-57-38-175Z.yml  page-2026-05-24T23-12-22-534Z.yml  page-2026-05-24T23-14-39-916Z.yml  page-2026-05-24T23-18-06-044Z.yml  page-2026-05-25T01-24-41-589Z.yml  page-2026-05-25T01-50-18-099Z.yml  page-2026-05-25T01-50-24-671Z.yml  page-2026-05-25T01-50-28-834Z.yml  page-2026-05-25T01-50-32-647Z.yml  page-2026-05-25T13-31-49-578Z.yml  page-2026-05-25T13-32-39-459Z.yml  page-2026-05-25T13-32-49-315Z.yml  page-2026-05-25T13-53-55-864Z.yml  page-2026-05-25T13-54-39-795Z.yml  page-2026-05-25T13-54-55-881Z.yml  page-2026-05-25T13-55-04-159Z.yml  page-2026-05-25T13-55-10-444Z.yml  page-2026-05-25T14-05-11-705Z.yml  page-2026-05-25T14-05-45-779Z.yml  page-2026-05-25T14-05-59-648Z.yml  page-2026-05-25T14-06-10-486Z.yml  page-2026-05-25T14-07-52-183Z.yml  page-2026-05-25T14-09-11-337Z.yml  pixel-pal-palette.txt
.serena/: project.yml
docs/: ARCHITECTURE.md  architecture-rebuild-roadmap.md  review-lenses.md
electron/: main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_config.rs  mod.rs  runtime.rs
(+291 files in other folders)
