[package]
name = "pixel-pal-app"
version = "0.5.0"
edition = "2021"

[lib]
name = "pixel_pal_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
keyring = { version = "3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
